[gd_scene load_steps=4 format=3 uid="uid://dtkyg22h366pp"]

[ext_resource type="Script" uid="uid://l5ol5ecv7kli" path="res://Scene/Menu/level_menu.gd" id="1_wfo54"]
[ext_resource type="Texture2D" uid="uid://b1nsfj17dganx" path="res://Sprite/icon.svg" id="2_jb2jl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wfo54"]
bg_color = Color(0.34117648, 0.34117648, 0.34117648, 1)

[node name="Levels" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wfo54")
script = ExtResource("1_wfo54")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Back" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
text = "Back"

[node name="Title" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/normal_font_size = 50
text = "Levels"
horizontal_alignment = 1

[node name="LevelList" type="ItemList" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/h_separation = 35
theme_override_constants/v_separation = 35
theme_override_constants/icon_margin = 10
item_count = 10
max_columns = 5
fixed_icon_size = Vector2i(40, 40)
item_0/text = "1"
item_0/icon = ExtResource("2_jb2jl")
item_1/text = "2"
item_1/icon = ExtResource("2_jb2jl")
item_2/text = "3"
item_2/icon = ExtResource("2_jb2jl")
item_3/text = "4"
item_3/icon = ExtResource("2_jb2jl")
item_4/text = "5"
item_4/icon = ExtResource("2_jb2jl")
item_5/text = "6"
item_5/icon = ExtResource("2_jb2jl")
item_6/text = "7"
item_6/icon = ExtResource("2_jb2jl")
item_7/text = "8"
item_7/icon = ExtResource("2_jb2jl")
item_8/text = "9"
item_8/icon = ExtResource("2_jb2jl")
item_9/text = "10"
item_9/icon = ExtResource("2_jb2jl")

[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="item_clicked" from="VBoxContainer/LevelList" to="." method="_on_level_list_item_clicked"]
